--- a/style.scss
+++ b/style.scss
@@ -80,6 +80,7 @@ a{
 
 .heading{
     width: 100%;
+    margin: 1rem 0;
 }
 
 h1{
@@ -200,6 +201,8 @@ body{
 h2{
     font-size: 1.3em;
     font-weight: bold;
+    margin-bottom: 0;
+    margin-block-start: 0;
 }
 
 h3{
@@ -525,6 +528,10 @@ header{
     justify-content: space-evenly;*/
     background-color: #F2F2F2;
 
+    .heading{
+        margin-bottom: 0;
+    }
+
     .restaurants-list{
 
         .card-tall{
@@ -550,6 +557,8 @@ header{
                 .badge__new{
                     display: flex;
                     position: absolute;
+                    width: 70px;
+                    height: 30px;
                     top: 8%;
                     right: 5%;
                     font-weight: bold;
@@ -597,6 +606,7 @@ footer{
         font-family: 'Shrikhand', cursive;
         color: white;
         margin-bottom: 1rem;
+        margin-top: 1rem;
     }
 
     ul{
@@ -637,7 +647,8 @@ footer{
     @include flex-centre(row);
     background-color: white;
     z-index: 1000;
-    position: relative;
+    position: sticky;
+    box-shadow: none;
 
     .back__link{
         position: absolute;
@@ -911,9 +922,13 @@ footer{
         height: 1100px;
         padding: 5%;
 
+        .heading{
+            margin-top: 1rem;
+        }
+
         .restaurants-list{
             width: 100%;
-            height: 95%;
+            height: 98%;
             @include flex-centre(column);
             justify-content: space-evenly;
 
@@ -1007,7 +1022,7 @@ footer{
 
         .menu-overview{
             flex-direction: column;
-            padding: 0% 5% 20% 5%;
+            padding: 8% 5% 15% 5%;
             margin-top: -50px;
             background-color: #F2F2F2;
             border-top-left-radius: 45px;
@@ -1137,7 +1152,7 @@ footer{
             .tuto-list li{
                 @include rounded(15px);
                 padding: 1.5rem 0 1.5rem 2rem;
-                margin-bottom: 1.5rem;
+                //margin-bottom: 1.5rem;
                 box-shadow: 0px 4px 8px #c5c5c5;
                 position: relative;
                 >span{
@@ -1315,7 +1330,7 @@ footer{
             width: 100%;
             box-sizing: border-box;
             justify-content: space-between;
-            padding: 0% 5% 10% 5%;
+            padding: 3% 5% 0% 5%;
             margin-top: -50px;
             background-color: #F2F2F2;
             border-top-left-radius: 45px;
@@ -1340,7 +1355,7 @@ footer{
                 display: flex;
                 flex-flow: row wrap;   
                 justify-content: space-between;             
-                margin-bottom: 3%;
+                margin-bottom: 0;
 
                 >.heading{
                     margin-top: 2.5rem;
@@ -1393,6 +1408,11 @@ footer{
 
             .button__action-container{
                 width: 100%;
+                margin: 7% 0 8%;
+
+                .button__action{
+                    margin-top: 0;
+                }
             }
 
         }
@@ -1439,7 +1459,11 @@ footer{
     /******* MAIN *******/
 
     .restaurants-overview{
-        padding: 0 5%;
+        padding: 2% 5% 0% 5%;
+
+        .heading{
+            margin-bottom: 1rem;
+        }
 
         .restaurants-list{
             display: flex;
@@ -1500,7 +1524,7 @@ footer{
             flex-flow: row wrap;
             align-content: center;
             justify-content: space-between;
-            padding: 0% 5% 10% 5%;
+            padding: 0% 5% 5% 5%;
             margin-top: -50px;
             background-color: #F2F2F2;
             border-top-left-radius: 45px;
@@ -1579,6 +1603,10 @@ footer{
 
             .button__action-container{
                 width: 100%;
+
+                .button__action{
+                    margin-top: 1.5%;
+                }
             }
 
         }
