--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,3 @@
-// Test loader 3
 $animation-duration3: 1.5s;
 $animation-delay3: .1s;
 
@@ -55,15 +54,6 @@ $grey-light: #f8f8f8;
     text-align: center;
 }
 
-//$dark-mint: darken($mint, 35%);
-
-$primary-color: #9356DC;
-$primary-color--pastel: pastel($primary-color);
-$secondary-color: #FF79DA;
-$third-color: #99E2D0;
-$pink--fading: linear-gradient(to bottom right,$secondary-color, $primary-color);
-$grey-light: #f8f8f8;
-
 @function pastel($clr){
     $hue: hue($clr);
     $sat: 100%;
@@ -72,28 +62,6 @@ $grey-light: #f8f8f8;
   
     @return $pastel;
 }
-
-a{
-    text-decoration: none;
-    color: black;
-}
-
-.heading{
-    width: 100%;
-    margin: 1rem 0;
-}
-
-h1{
-    font-family: 'Shrikhand', cursive;
-    font-size: 35px;
-    letter-spacing: 1px;
-    width: 100%;
-    /*text-align: left;*/
-    margin: 0;
-}
-
-
-// Tentative de changement opacité du body
 
 @keyframes opacityBody{
     0%{
@@ -104,65 +72,6 @@ h1{
     100% {
         opacity: 1;
         z-index: 1000;
-    }
-}
-
-
-
-body{
-    margin: 0;
-    font-family: Roboto, sans-serif;
-    width: 100%;
-}
-
-.content{
-    width: 100%;
-    height: 100%;
-    animation: opacityBody .2s;
-    animation-delay: 1.8s;
-    animation-fill-mode: both;
-}
-
-
-.loader3{
-    position: absolute;
-    width: 100vw;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    background-color: transparent;
-    z-index: 1000;
-    animation: loader3 .2s;
-    animation-delay: 1.8s;
-    animation-fill-mode: both;
-
-   &__item{
-        animation: loader3__item 1s;
-        animation-iteration-count: 1;
-        animation-fill-mode: both;
-        font-family: 'Shrikhand';
-        font-size: 3rem;
-        letter-spacing: .2rem;
-        @include flex-centre(row);
-
-        @for $i from 1 through 8 {
-            &--#{$i} {
-                animation-delay: $animation-delay3 * $i;
-            }
-
-            &--#{1}, &--#{2}{
-                color: $primary-color;
-            }
-
-            &--#{3}, &--#{4}{
-                color: $secondary-color;
-            }
-
-            &--#{5}, &--#{6}, &--#{7}, &--#{8}{
-                color: $third-color;
-            }
-
-        }
     }
 }
 
@@ -191,12 +100,36 @@ body{
     }
 }
 
+  
+@keyframes slidein {
+    from {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+
+    to {
+    opacity: 1;
+    }
+}
 
 
+a{
+    text-decoration: none;
+    color: black;
+}
 
+.heading{
+    width: 100%;
+    margin: 1rem 0;
+}
 
-
-
+h1{
+    font-family: 'Shrikhand', cursive;
+    font-size: 35px;
+    letter-spacing: 1px;
+    width: 100%;
+    margin: 0;
+}
 
 h2{
     font-size: 1.3em;
@@ -249,19 +182,12 @@ p{
     }
 }
 
-/**** ESSAI EN CE QUI CONCERNE LE REMPLISSAGE DES COEURS **/
-
-/*.pin-heart{
-    position: relative;
-}*/
-
 .heart {
     font-size: 1.5rem;
 
     &:hover {
         position: relative;
         cursor: pointer;
-        //color: transparent;
         & .heart--anim {
             z-index: 1; 
             transform: scale(1.1); 
@@ -286,14 +212,12 @@ p{
         //background: -webkit-linear-gradient($primary-color, $lavande-light);
         background: -webkit-linear-gradient($primary-color, pastel($primary-color));
         background-clip: text;
-        -webkit-background-clip: text;//Utilisation d'un préfixe navigateur, sinon ne fontionne pas.
+        -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         z-index: -1;
         transform: scale(0);
-      //  transform-origin: bottom;
         transform-origin: center;
         transition: transform 300ms;
-        //transition: opacity 200ms, transform 300ms 100ms;
 
         &:hover{
             z-index: 1; 
@@ -303,8 +227,61 @@ p{
     }
 }
 
+body{
+    margin: 0;
+    font-family: Roboto, sans-serif;
+    width: 100%;
+}
 
-// Test apparition des menus
+.content{
+    width: 100%;
+    height: 100%;
+    animation: opacityBody .2s;
+    animation-delay: 1.8s;
+    animation-fill-mode: both;
+}
+
+.loader3{
+    position: absolute;
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    z-index: 1000;
+    animation: loader3 .2s;
+    animation-delay: 1.8s;
+    animation-fill-mode: both;
+
+   &__item{
+        animation: loader3__item 1s;
+        animation-iteration-count: 1;
+        animation-fill-mode: both;
+        font-family: 'Shrikhand';
+        font-size: 3rem;
+        letter-spacing: .2rem;
+        @include flex-centre(row);
+
+        @for $i from 1 through 8 {
+            &--#{$i} {
+                animation-delay: $animation-delay3 * $i;
+            }
+
+            &--#{1}, &--#{2}{
+                color: $primary-color;
+            }
+
+            &--#{3}, &--#{4}{
+                color: $secondary-color;
+            }
+
+            &--#{5}, &--#{6}, &--#{7}, &--#{8}{
+                color: $third-color;
+            }
+
+        }
+    }
+}
 
 .menu-prev{
     $animation-delay: .25s;
@@ -370,17 +347,6 @@ p{
     }
     
 }
-  
-@keyframes slidein {
-    from {
-        transform: translateY(20px);
-        opacity: 0;
-    }
-
-    to {
-    opacity: 1;
-    }
-}
 
 
 /******* HEADER *******/
@@ -408,9 +374,6 @@ header{
     }
 }
 
-
-
-// Essai sélection d'un plat
 
 
 /******* LOC *******/
@@ -704,6 +667,67 @@ footer{
         display: flex;
         flex-flow: column wrap;
         width: 100%;
+        $animation-delay: .25s;
+        $animation-duration: 1s;
+
+        &:nth-child(2){
+
+            .heading{
+                animation: slidein;
+                animation-duration: $animation-duration;
+                animation-fill-mode: forwards;
+                opacity: 0;
+            }
+        
+            article{
+                animation: slidein;
+                animation-duration: $animation-duration;
+                animation-fill-mode: forwards;
+                opacity: 0;
+                animation-delay: $animation-delay; 
+            }
+            
+        }
+    
+        &:nth-child(3){
+    
+            .heading{
+                animation: slidein;
+                animation-duration: $animation-duration;
+                animation-fill-mode: forwards;
+                opacity: 0;
+                animation-delay: $animation-delay; 
+            }
+        
+            article{
+                animation: slidein;
+                animation-duration: $animation-duration;
+                animation-fill-mode: forwards;
+                opacity: 0;
+                animation-delay: $animation-delay * 2; 
+            }
+    
+        }
+    
+        &:nth-child(4){
+    
+            .heading{
+                animation: slidein;
+                animation-duration: $animation-duration;
+                animation-fill-mode: forwards;
+                opacity: 0;
+                animation-delay: $animation-delay * 2; 
+            }
+        
+            article{
+                animation: slidein;
+                animation-duration: $animation-duration;
+                animation-fill-mode: forwards;
+                opacity: 0;
+                animation-delay: $animation-delay * 3; 
+            }
+            
+        }
 
         >.heading{
             margin-top: 2.5rem;
@@ -728,8 +752,6 @@ footer{
             @include rounded(20px);
             width: 45%;
             height: fit-content;
-            //height: 20px;
-            //flex-flow: row wrap;
             flex-flow: row nowrap;
             position: relative;
             box-sizing: border-box;
@@ -785,7 +807,7 @@ footer{
                     font-size: 1.3rem;
                     background: white;
                     background-clip: text;
-                    -webkit-background-clip: text;//Utilisation d'un préfixe navigateur, sinon ne fontionne pas.
+                    -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
                     transform: rotate(-360deg);
                     transition: .7s;
@@ -838,10 +860,6 @@ footer{
 
             }
 
-
-// Essai sélection d'un plat
-
-
         }
 
     }
@@ -867,6 +885,8 @@ footer{
         max-width: 90%;
     }
 }
+
+
 
 
 /********** MOBILE DISPLAY **********/
@@ -901,19 +921,17 @@ footer{
     }
 
     .tuto{
-        /*margin: 30px auto 30px auto;*/
         width: 90%;
         @include flex-centre--left-align;
-        /*justify-items: left;*/
 
         .tuto-list{
-            /*padding: 0;*/
             width: 97%;
             margin-right: auto;
             margin-left: 3%;
         }
     }
 
+    
 
 /******* MAIN *******/
 
@@ -996,20 +1014,6 @@ footer{
 
 /*** HEADER ***/
 
-/*
-    .header-restaurant{
-        @include flex-centre(row);
-
-        >.back__link{
-            position: absolute;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            left: 8%;
-        }
-    }
-*/
-
     .page-menu{
         display: flex;
         flex-direction: column;
@@ -1079,11 +1083,8 @@ footer{
                     margin-bottom: 1rem;
     
                     .card-small--texte{
-                        /*height: 100%;*/
-                        /*width: 90%;*/
                         display: flex;
                         flex-direction: column;
-    
                     }
     
                 }
@@ -1096,22 +1097,6 @@ footer{
 
 }  
 
-
-/*.menu-prev{
-    display: flex;
-    flex-direction: column;
-}*/
-
-/*.menu--heading .fa-heart{
-    font-size: 1.5em;
-}*/
-
-
-
-/*.card-small--price{
-    /*height: 100%;
-    /*width: 10%;
-}*/
 
 
 
@@ -1149,10 +1134,9 @@ footer{
                 text-align: center;
             }
         
-            .tuto-list li{
+            /*.tuto-list li{
                 @include rounded(15px);
                 padding: 1.5rem 0 1.5rem 2rem;
-                //margin-bottom: 1.5rem;
                 box-shadow: 0px 4px 8px #c5c5c5;
                 position: relative;
                 >span{
@@ -1180,13 +1164,13 @@ footer{
                 text-align: center;
                 left: -0.5rem;
                 top: 1.2rem;
-                /*width: 1.5rem;
-                height: 1.5rem;*/
-                /*left: 10px;
+                //width: 1.5rem;
+                height: 1.5rem;
+                //left: 10px;
                 top: 20px;
                 width: 20px;
-                height: 40px;*/
-            }
+                height: 40px;
+            }*/
         }
     }
 
@@ -1197,9 +1181,6 @@ footer{
     .restaurants-overview{
         width: 100%;
         height: 700px;
-        /*@include flex-centre(row);
-        flex-wrap: wrap;
-        justify-content: space-between;*/
         display: flex;
         flex-direction: column;
         padding: 0% 5%;
@@ -1209,20 +1190,12 @@ footer{
         .restaurants-list{
             width: 100%;
             height: 85%;
-           // @include flex-centre(row);
             display: flex;
             flex-direction: row;
             align-content: space-around;
             justify-content: space-between;
             flex-wrap: wrap;
             box-sizing: border-box;
-
-            /*display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            align-content: center;
-            justify-items: center;
-            justify-content: space-evenly;*/
         
             .card-tall{
                 @include rounded(20px);
@@ -1242,7 +1215,6 @@ footer{
                     img{
                         @include rounded-top(20px);
                         width: 100%;
-                        /*height: 70%;*/
                         object-fit: cover;
                     }
             
@@ -1254,8 +1226,6 @@ footer{
                         font-weight: bold;
                         color: darken($third-color, 35%);
                         background: $third-color;
-                        /*width: 70px;
-                        height: 30px;*/
                         font-weight: bold;
                         font-size: 0.9em;
                         border-radius: 2px;
@@ -1316,14 +1286,6 @@ footer{
             object-fit: cover;
         }
 
-
-        /**** Classe à retravailler et concaténer avec H1 **/
-
-        /*.menu-prev{
-            display: flex;
-            flex-direction: column;
-        }*/
-
         .menu-overview{
             flex-flow: column wrap;
             align-content: center;
@@ -1338,7 +1300,6 @@ footer{
 
             .menu--heading{
                 display: flex;
-                /*justify-content: space-between;*/
                 align-items: baseline;
                 padding: 5% 0% 0% 0%;
                 font-family: 'Shrikhand', cursive;
@@ -1372,7 +1333,6 @@ footer{
                         background-color: $third-color;
                         position: absolute;
                         left: 0;
-                        /*transform: translateX(40%);*/
                         margin-top: 1.5rem;
                     }
 
@@ -1413,15 +1373,13 @@ footer{
                 .button__action{
                     margin-top: 0;
                 }
+
             }
 
         }
 
-        /*.menu--heading .fa-heart{
-            font-size: 1.5em;
-        }*/
-
     }
+
 }
 
 
@@ -1512,14 +1470,6 @@ footer{
             object-fit: cover;
         }
 
-
-        /**** Classe à retravailler et concaténer avec H1 **/
-
-        /*.menu-prev{
-            display: flex;
-            flex-direction: column;
-        }*/
-
         .menu-overview{
             flex-flow: row wrap;
             align-content: center;
@@ -1532,7 +1482,6 @@ footer{
 
             .menu--heading{
                 display: flex;
-                /*justify-content: space-between;*/
                 align-items: baseline;
                 padding: 5% 5% 0% 0%;
                 font-family: 'Shrikhand', cursive;
@@ -1557,7 +1506,6 @@ footer{
                     margin-bottom: 1.8rem;
                     text-transform: uppercase;
                     width: 100%;
-                    /*text-align: center;*/
                     position: relative;
 
                     &::after{
@@ -1568,7 +1516,6 @@ footer{
                         background-color: $third-color;
                         position: absolute;
                         left: 0;
-                        /*transform: translateX(40%);*/
                         margin-top: 1.5rem;
                     }
 
@@ -1607,13 +1554,10 @@ footer{
                 .button__action{
                     margin-top: 1.5%;
                 }
+                
             }
 
         }
-
-        /*.menu--heading .fa-heart{
-            font-size: 1.5em;
-        }*/
 
     }
 
