--- a/css/style.css
+++ b/css/style.css
@@ -487,11 +487,10 @@ header .logo {
   height: 30px;
   top: 8%;
   right: 5%;
-  font-weight: bold;
   color: #2c9c81;
   background: #99E2D0;
   font-weight: bold;
-  font-size: 0.9em;
+  font-size: 0.8rem;
   border-radius: 2px;
   align-items: center;
   justify-content: center;
