Modification largeur pin tuto

--- a/style.scss
+++ b/style.scss
@@ -462,11 +462,11 @@ header{
                 content: counter(ListCount);
                 background: $primary-color;
                 color: white;
-                padding: 0.3rem 0.5rem;
+                padding: 0.3rem 0.6rem;
                 border-radius: 25px;
                 position: absolute;
                 text-align: center;
-                left: -0.5rem;
+                left: -.8rem;
                 top: 1.2rem;
             }
         }
