--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,6 @@ $grey-light: #f8f8f8;
     justify-content: center;
 }
 
-
 @mixin flex-centre($direction){
     display: flex;
     flex-direction: $direction;
@@ -65,7 +64,7 @@ $grey-light: #f8f8f8;
 
 @keyframes opacityBody{
     0%{
-        opacity: .3;
+        opacity: 0;
         z-index: -1000;
     }
 
@@ -84,7 +83,7 @@ $grey-light: #f8f8f8;
 
 @keyframes loader3__item {
     0% {
-        transform: translateY(0) rotate(-360deg);
+        transform: translateY(0) rotate(0);
     }
 
     25% {
@@ -92,11 +91,12 @@ $grey-light: #f8f8f8;
     }
 
     75% {
-        transform: translateY(-1rem);
+        transform: translateY(-1rem) rotate(0);
     }
+    
 
     100% {
-        transform: translateY(0);
+        transform: translateY(0) rotate(-360deg);
     }
 }
 
@@ -242,7 +242,7 @@ body{
 }
 
 .loader3{
-    position: absolute;
+    position: fixed;
     width: 100vw;
     min-height: 100vh;
     display: flex;
