--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 @keyframes loader3__item {
   0% {
-    transform: translateY(0) rotate(0);
+    transform: translateY(0) rotate(-360deg);
   }
   25% {
     transform: translateY(1rem);
@@ -119,10 +119,6 @@ p {
   z-index: 1;
   transform: scale(1.1);
 }
-.heart:hover:not(:hover) .heart--anim {
-  transform-origin: top;
-  transition: transform 300ms;
-}
 .heart--anim {
   position: absolute;
   top: 0;
@@ -153,7 +149,7 @@ body {
   width: 100%;
   height: 100%;
   animation: opacityBody 0.2s;
-  animation-delay: 1.8s;
+  animation-delay: 2s;
   animation-fill-mode: both;
 }
 
@@ -166,11 +162,11 @@ body {
   background-color: transparent;
   z-index: 1000;
   animation: loader3 0.2s;
-  animation-delay: 1.8s;
+  animation-delay: 2s;
   animation-fill-mode: both;
 }
 .loader3__item {
-  animation: loader3__item 1s;
+  animation: loader3__item 1.2s;
   animation-iteration-count: 1;
   animation-fill-mode: both;
   font-family: "Shrikhand";
@@ -495,7 +491,7 @@ header .logo {
   align-items: center;
   justify-content: center;
 }
-.restaurants-overview .restaurants-list .card-tall a .card-tall--heading {
+.restaurants-overview .restaurants-list .card-tall a .card-tall__heading {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   width: 100%;
@@ -507,7 +503,7 @@ header .logo {
   align-items: center;
   background-color: white;
 }
-.restaurants-overview .restaurants-list .card-tall a .card-tall--heading .pin-heart {
+.restaurants-overview .restaurants-list .card-tall a .card-tall__heading .pin-heart {
   font-size: 1.2em;
 }
 
@@ -587,7 +583,7 @@ footer .picto-footer {
   border-top-left-radius: 45px;
   border-top-right-radius: 45px;
 }
-.page-menu .menu-overview .menu--heading {
+.page-menu .menu-overview .menu__heading {
   width: 100%;
   display: flex;
   /*justify-content: space-between;*/
@@ -596,7 +592,7 @@ footer .picto-footer {
   font-family: "Shrikhand", cursive;
   font-size: 1.5rem;
 }
-.page-menu .menu-overview .menu--heading .shrikhand {
+.page-menu .menu-overview .menu__heading .shrikhand {
   margin-bottom: 0;
   margin-right: 20%;
 }
@@ -904,7 +900,7 @@ footer .picto-footer {
     border-top-left-radius: 45px;
     border-top-right-radius: 45px;
   }
-  .page-menu .menu-overview .menu--heading {
+  .page-menu .menu-overview .menu__heading {
     width: 100%;
     margin-bottom: 5%;
     display: flex;
@@ -914,7 +910,7 @@ footer .picto-footer {
     font-family: "Shrikhand", cursive;
     font-size: 1.5rem;
   }
-  .page-menu .menu-overview .menu--heading .shrikhand {
+  .page-menu .menu-overview .menu__heading .shrikhand {
     margin-bottom: 0;
   }
   .page-menu .menu-overview .menu-prev {
@@ -1084,7 +1080,7 @@ footer .picto-footer {
     align-items: center;
     justify-content: center;
   }
-  .restaurants-overview .restaurants-list .card-tall a .card-tall--heading {
+  .restaurants-overview .restaurants-list .card-tall a .card-tall__heading {
     width: 100%;
     height: 30%;
     box-sizing: border-box;
@@ -1093,7 +1089,7 @@ footer .picto-footer {
     justify-content: space-between;
     align-items: center;
   }
-  .restaurants-overview .restaurants-list .card-tall a .card-tall--heading .pin-heart {
+  .restaurants-overview .restaurants-list .card-tall a .card-tall__heading .pin-heart {
     font-size: 1.2em;
   }
 
@@ -1135,14 +1131,14 @@ footer .picto-footer {
     border-top-left-radius: 45px;
     border-top-right-radius: 45px;
   }
-  .page-menu .menu-overview .menu--heading {
+  .page-menu .menu-overview .menu__heading {
     display: flex;
     align-items: baseline;
     padding: 5% 0% 0% 0%;
     font-family: "Shrikhand", cursive;
     font-size: 1.5rem;
   }
-  .page-menu .menu-overview .menu--heading .shrikhand {
+  .page-menu .menu-overview .menu__heading .shrikhand {
     margin-bottom: 0;
   }
   .page-menu .menu-overview .menu-prev {
@@ -1277,14 +1273,14 @@ footer .picto-footer {
     border-top-left-radius: 45px;
     border-top-right-radius: 45px;
   }
-  .page-menu .menu-overview .menu--heading {
+  .page-menu .menu-overview .menu__heading {
     display: flex;
     align-items: baseline;
     padding: 5% 5% 0% 0%;
     font-family: "Shrikhand", cursive;
     font-size: 1.5rem;
   }
-  .page-menu .menu-overview .menu--heading .shrikhand {
+  .page-menu .menu-overview .menu__heading .shrikhand {
     margin-bottom: 0;
     margin-right: 20%;
   }
