--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,3 @@
-$animation-delay3: .1s;
-
-
 $primary-color: #9356DC;
 $primary-color--pastel: pastel($primary-color);
 $secondary-color: #FF79DA;
@@ -83,7 +80,7 @@ $grey-light: #f8f8f8;
 
 @keyframes loader3__item {
     0% {
-        transform: translateY(0) rotate(0);
+        transform: translateY(0) rotate(-360deg);
     }
 
     25% {
@@ -99,6 +96,7 @@ $grey-light: #f8f8f8;
         transform: translateY(0) rotate(-360deg);
     }
 }
+
 
   
 @keyframes slidein {
@@ -188,18 +186,11 @@ p{
     &:hover {
         position: relative;
         cursor: pointer;
+
         & .heart--anim {
             z-index: 1; 
             transform: scale(1.1); 
         }
-
-// Tenter d'avoir une transition inverse lors du not hover
-    &:not(:hover){
-        & .heart--anim {
-            transform-origin: top;
-            transition: transform 300ms;
-        }
-    }
 
     }
     
@@ -237,9 +228,11 @@ body{
     width: 100%;
     height: 100%;
     animation: opacityBody .2s;
-    animation-delay: 1.8s;
+    animation-delay: 2s;
     animation-fill-mode: both;
 }
+
+$animation-delay3: .1s;
 
 .loader3{
     position: fixed;
@@ -250,11 +243,11 @@ body{
     background-color: transparent;
     z-index: 1000;
     animation: loader3 .2s;
-    animation-delay: 1.8s;
+   animation-delay: 2s;
     animation-fill-mode: both;
 
    &__item{
-        animation: loader3__item 1s;
+        animation: loader3__item 1.2s;
         animation-iteration-count: 1;
         animation-fill-mode: both;
         font-family: 'Shrikhand';
@@ -534,7 +527,7 @@ header{
                     justify-content: center;    
                 }
         
-                .card-tall--heading{
+                .card-tall__heading{
                     @include rounded-bottom(20px);
                     width: 100%;
                     height: 30%;
@@ -645,7 +638,7 @@ footer{
         border-top-right-radius: 45px;
 
 
-        .menu--heading{
+        .menu__heading{
             width: 100%;
             display: flex;
             /*justify-content: space-between;*/
@@ -1032,7 +1025,7 @@ footer{
             border-top-left-radius: 45px;
             border-top-right-radius: 45px;
 
-            .menu--heading{
+            .menu__heading{
                 width: 100%;
                 margin-bottom: 5%;
                 display: flex;
@@ -1233,7 +1226,7 @@ footer{
                         justify-content: center;    
                     }
             
-                    .card-tall--heading{
+                    .card-tall__heading{
                         width: 100%;
                         height: 30%;
                         box-sizing: border-box;
@@ -1298,7 +1291,7 @@ footer{
             border-top-left-radius: 45px;
             border-top-right-radius: 45px;
 
-            .menu--heading{
+            .menu__heading{
                 display: flex;
                 align-items: baseline;
                 padding: 5% 0% 0% 0%;
@@ -1480,7 +1473,7 @@ footer{
             border-top-left-radius: 45px;
             border-top-right-radius: 45px;
 
-            .menu--heading{
+            .menu__heading{
                 display: flex;
                 align-items: baseline;
                 padding: 5% 5% 0% 0%;
