Modification du loader (durée et naming)

--- a/css/style.css
+++ b/css/style.css
@@ -9,21 +9,24 @@
     z-index: 1000;
   }
 }
-@keyframes loader3 {
+@keyframes loader {
   100% {
     opacity: 0;
     z-index: -1000;
   }
 }
-@keyframes loader3__item {
+@keyframes loader__item {
   0% {
     transform: translateY(0) rotate(-360deg);
   }
   25% {
     transform: translateY(1rem);
   }
-  75% {
+  50% {
     transform: translateY(-1rem) rotate(0);
+  }
+  75% {
+    transform: translateY(1rem);
   }
   100% {
     transform: translateY(0) rotate(-360deg);
@@ -148,12 +151,12 @@ body {
 .content {
   width: 100%;
   height: 100%;
-  animation: opacityBody 0.2s;
-  animation-delay: 2s;
+  animation: opacityBody 0.5s;
+  animation-delay: 2.5s;
   animation-fill-mode: both;
 }
 
-.loader3 {
+.loader {
   position: fixed;
   width: 100vw;
   min-height: 100vh;
@@ -161,12 +164,12 @@ body {
   justify-content: center;
   background-color: transparent;
   z-index: 1000;
-  animation: loader3 0.2s;
-  animation-delay: 2s;
+  animation: loader 0.5s;
+  animation-delay: 2.5s;
   animation-fill-mode: both;
 }
-.loader3__item {
-  animation: loader3__item 1.2s;
+.loader__item {
+  animation: loader__item 1.9s;
   animation-iteration-count: 1;
   animation-fill-mode: both;
   font-family: "Shrikhand";
@@ -177,100 +180,100 @@ body {
   align-items: center;
   justify-content: center;
 }
-.loader3__item--1 {
+.loader__item--1 {
   animation-delay: 0.1s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--2 {
+.loader__item--2 {
   animation-delay: 0.2s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--3 {
+.loader__item--3 {
   animation-delay: 0.3s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--4 {
+.loader__item--4 {
   animation-delay: 0.4s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--5 {
+.loader__item--5 {
   animation-delay: 0.5s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--6 {
+.loader__item--6 {
   animation-delay: 0.6s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--7 {
+.loader__item--7 {
   animation-delay: 0.7s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
-.loader3__item--8 {
+.loader__item--8 {
   animation-delay: 0.8s;
 }
-.loader3__item--1, .loader3__item--2 {
+.loader__item--1, .loader__item--2 {
   color: #9356DC;
 }
-.loader3__item--3, .loader3__item--4 {
+.loader__item--3, .loader__item--4 {
   color: #FF79DA;
 }
-.loader3__item--5, .loader3__item--6, .loader3__item--7, .loader3__item--8 {
+.loader__item--5, .loader__item--6, .loader__item--7, .loader__item--8 {
   color: #99E2D0;
 }
 
