--- a/style.scss
+++ b/style.scss
@@ -71,14 +71,14 @@ $grey-light: #f8f8f8;
     }
 }
 
-@keyframes loader3{
+@keyframes loader{
     100% {
         opacity: 0;
         z-index: -1000;
     }
 }
 
-@keyframes loader3__item {
+@keyframes loader__item {
     0% {
         transform: translateY(0) rotate(-360deg);
     }
@@ -87,10 +87,13 @@ $grey-light: #f8f8f8;
         transform: translateY(1rem);
     }
 
-    75% {
+    50% {
         transform: translateY(-1rem) rotate(0);
     }
-    
+
+    75%{
+        transform: translateY(1rem);
+    }
 
     100% {
         transform: translateY(0) rotate(-360deg);
@@ -226,14 +229,16 @@ body{
 .content{
     width: 100%;
     height: 100%;
-    animation: opacityBody .2s;
-    animation-delay: 2s;
+   // animation: opacityBody .4s;
+    //  animation-delay: 1.8s;
+    animation: opacityBody .5s;
+    animation-delay: 2.5s;
     animation-fill-mode: both;
 }
 
-$animation-delay3: .1s;
+$animation-delay: .1s;
 
-.loader3{
+.loader{
     position: fixed;
     width: 100vw;
     min-height: 100vh;
@@ -241,12 +246,12 @@ $animation-delay3: .1s;
     justify-content: center;
     background-color: transparent;
     z-index: 1000;
-    animation: loader3 .2s;
-   animation-delay: 2s;
+    animation: loader .5s;
+   animation-delay: 2.5s;
     animation-fill-mode: both;
 
    &__item{
-        animation: loader3__item 1.2s;
+        animation: loader__item 1.9s;
         animation-iteration-count: 1;
         animation-fill-mode: both;
         font-family: 'Shrikhand';
@@ -256,7 +261,7 @@ $animation-delay3: .1s;
 
         @for $i from 1 through 8 {
             &--#{$i} {
-                animation-delay: $animation-delay3 * $i;
+                animation-delay: $animation-delay * $i;
             }
 
             &--#{1}, &--#{2}{
